--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ include_directories(./)
 file(GLOB_RECURSE SOURCES "serialize/*.cpp")
 
 add_executable(main ${SOURCES} main.cpp)
+add_executable(byteOrder ${SOURCES} byteOrder.cpp)
